libs/extractor/src/snapshots/extractor__tests__stylex_position_try_and_view_transition_class.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract_tsx(r\"import stylex from '@stylexjs/stylex';\nconst fallback = stylex.positionTry({ top: '0', insetBlockEnd: 'auto' });\nconst transition = stylex.viewTransitionClass({ animationDuration: '300ms' });\"))"
---
ToBTreeSet {
    styles: {
        Css(
            ExtractCss {
                css: ".Ksxp_dtest_ptsx_d0{animation-duration:300ms;}",
                file: "test.tsx",
            },
        ),
        Css(
            ExtractCss {
                css: "@position-try --Ksxp_dtest_ptsx_d1{top:0;inset-block-end:auto;}",
                file: "test.tsx",
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport stylex from \"@stylexjs/stylex\";\nconst fallback = \"--Ksxp_dtest_ptsx_d1\";\nconst transition = \"Ksxp_dtest_ptsx_d0\";\n",
}
