libs/extractor/src/snapshots/extractor__tests__stylex_props_computed_dynamic_key.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import stylex from '@stylexjs/stylex';\nconst styles = stylex.create({ base: { display: 'inline-block', fontWeight: '500' } });\nconst colorStyles = stylex.create({ red: { color: 'red' }, blue: { color: 'blue' } });\nconst sizeStyles = stylex.create({ sm: { fontSize: '12px' }, lg: { fontSize: '20px' } });\nconst el = <div {...stylex.props(styles.base, colorStyles[color], sizeStyles[size])} />;\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "blue",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "inline-block",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "font-size",
                value: "12px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "font-size",
                value: "20px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "font-weight",
                value: "500",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport stylex from \"@stylexjs/stylex\";\nconst styles = { \"base\": \"OHdp1ck6rgdym7_631 OHaiu_a11ys07ctz7a\" };\nconst colorStyles = {\n\t\"red\": \"OLcolor-vred\",\n\t\"blue\": \"OLcolor-vblue\"\n};\nconst sizeStyles = {\n\t\"sm\": \"OLfont_dsize-v12px\",\n\t\"lg\": \"OLfont_dsize-v20px\"\n};\nconst el = <div {...{ className: `OHdp1ck6rgdym7_631 OHaiu_a11ys07ctz7a ${colorStyles[color] || \"\"} ${sizeStyles[size] || \"\"}` }} />;\n",
}
