libs/extractor/src/snapshots/extractor__tests__stylex_props_computed_key_empty_namespace.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import stylex from '@stylexjs/stylex';\nconst styles = stylex.create({ empty: {}, filled: { color: 'red' } });\nconst el = <div {...stylex.props(styles['empty'], styles[key])} />;\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nconst styles = {\n\t\"empty\": \"\",\n\t\"filled\": \"a\"\n};\nconst el = <div {...{ className: styles[key] || \"\" }} />;\n",
}
