libs/extractor/src/snapshots/extractor__tests__stylex_props_computed_key_in_conditional.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import stylex from '@stylexjs/stylex';\nconst colorStyles = stylex.create({ red: { color: 'red' }, blue: { color: 'blue' } });\nconst el = <div {...stylex.props(isActive && colorStyles[color])} />;\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "blue",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nconst colorStyles = {\n\t\"red\": \"a\",\n\t\"blue\": \"b\"\n};\nconst el = <div {...{ className: isActive ? colorStyles[color] || \"\" : \"\" }} />;\n",
}
