libs/extractor/src/snapshots/extractor__tests__stylex_props_computed_key_only_dynamic_namespaces.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import stylex from '@stylexjs/stylex';\nconst styles = stylex.create({ bar: (h) => ({ height: h }) });\nconst el = <div {...stylex.props(styles[variant])} />;\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "height",
                level: 0,
                identifier: "h",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport stylex from \"@stylexjs/stylex\";\nconst styles = { \"bar\": \"OHc8d6yddblvsrfd8g\" };\nconst el = <div {...{ className: \"\" }} />;\n",
}
