libs/extractor/src/snapshots/extractor__tests__stylex_props_conditional_and.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import stylex from '@stylexjs/stylex';\nconst styles = stylex.create({\n    base: { color: 'red' },\n    active: { backgroundColor: 'blue' },\n});\nconst el = <div {...stylex.props(styles.base, isActive && styles.active)} />;\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background-color",
                value: "blue",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport stylex from \"@stylexjs/stylex\";\nconst styles = {\n\t\"base\": \"OLcolor-vred\",\n\t\"active\": \"OHc17k7qhkrpaxcbyp\"\n};\nconst el = <div {...{ className: `OLcolor-vred ${isActive ? \"OHc17k7qhkrpaxcbyp\" : \"\"}` }} />;\n",
}
