libs/extractor/src/snapshots/extractor__tests__stylex_props_conditional_consequent_only.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import stylex from '@stylexjs/stylex';\nconst styles = stylex.create({ active: { color: 'red' } });\nconst el = <div {...stylex.props(isActive ? styles.active : unknownRef)} />;\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nconst styles = { \"active\": \"a\" };\nconst el = <div {...{ className: isActive ? \"a\" : [unknownRef].flat(Infinity).filter(Boolean).join(\" \") }} />;\n",
}
